--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-heading: var(--font-heading), ui-sans-serif, Georgia, Cambria,
+    "Times New Roman", Times, serif;
+  --font-body: var(--font-body), ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -41,6 +45,44 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --color-border: hsl(var(--border));
+  --color-input: hsl(var(--input));
+  --color-ring: hsl(var(--ring));
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
+
+  --color-primary-800: #081a2b;
+  --color-primary-900: #040f19;
+  --color-primary: hsl(var(--primary));
+  --color-primary-foreground: hsl(var(--primary-foreground));
+
+  --color-secondary: hsl(var(--secondary));
+  --color-secondary-foreground: hsl(var(--secondary-foreground));
+
+  --color-destructive: hsl(var(--destructive));
+  --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+  --color-muted: hsl(var(--muted));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-accent: hsl(var(--accent));
+  --color-accent-foreground: hsl(var(--accent-foreground));
+
+  --color-popover: hsl(var(--popover));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+
+  --color-card: hsl(var(--card));
+  --color-card-foreground: hsl(var(--card-foreground));
+
+  --radius-xl: calc(var(--radius) + 4px);
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+  --animate-slide-out: slideOut 0.5s forwards;
 }
 
 :root {
@@ -113,10 +155,40 @@
 }
 
 @layer base {
+  :root {
+    --destructive-foreground: 0 0% 100%;
+    --secondary-foreground: 210 20% 10%;
+    --popover-foreground: 210 20% 10%;
+    --primary-foreground: 0 0% 100%;
+    --accent-foreground: 0 0% 100%;
+    --muted-foreground: 210 20% 10%;
+    --card-foreground: 210 20% 10%;
+    --destructive: 0 80% 60%;
+    --background: 210 20% 96%;
+    --foreground: 210 20% 10%;
+    --secondary: 40 90% 60%;
+    --popover: 210 10% 86%;
+    --primary: 210 70% 50%;
+    --border: 210 10% 59%;
+    --accent: 0 70% 50%;
+    --muted: 210 10% 86%;
+    --input: 210 10% 63%;
+    --card: 210 20% 96%;
+    --ring: 210 70% 50%;
+    --radius: 0.5rem;
+  }
   * {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-body;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-heading;
   }
 }
